# exercise

./: .gitignore  100-pandas-puzzles.ipynb  eg.sql  requirements.txt  settings.py
algorithms/assignments/: problem3.py
algorithms/intro/: binary_search.py  linear_sort.py  quick.py  sorting.py  tree.py
algorithms/template/: bfs.py  bisearch.py  dfs.py  sort.py
algorithms/tests/: test_func.py
async-tutorial/: main.py  pyproject.toml
aws/: s3.py
data/: backtest.sql
data-api/: README.md  app.py  pyproject.toml
data-api/src/data_api/: config.py  main.py  utils.py
data-api/src/data_api/admin/: dataset.py
data-api/src/data_api/inference/: svi.py
exploratory-analysis/: nflsnap.py
fuzzymerger/: merger.py
graph/: intro.ipynb  tutorial.py
handson-ml2/: 10_keras.py  11_traning.py
hydra/: example.py
hydra/config/: config.yaml
jax/: quickstart.py
mappingflow/: mapper.py
metaflow/: baseflow.py  branch.py  diagnostics.py  example.json  foreach.py  graphflow.py  jsonparam.py  linear.py  parameter.py  subflow.py
nba_play/: .gitignore  flow.py
nba_play/misc/: eight_schools.py  grridge.R  nba_glmnet.py
player-rl/models/: dcn.py  (+4 more)
processing/: .gitignore  pipeline.py
pyro/: brm.py  pyro_ignite.py  torch_dist.py
python-data-analysis/: matplotlib.ipynb
python-etl/: 100_Numpy_exercises.ipynb
pytorch/: autoencoder.py  basic.py
react-app/: package-lock.json
ridge_reg/: .gitignore  main.py  nba_numpyro.py  nba_pyro.py  nba_pyro_tune.py  nba_torch.py  nba_torch_tune.py  nnets.py  npnets.py  ridge.py  torch_reg.py  tune.py  utils.py
sqlalchemy/: db.py  session.py
stan/: linear_regression.stan
tensorflow/: basics.py  helloworld.ipynb
validation/: settings.py
web/dash/: pyproject.toml
web/dash/src/: app.py
web/streamlit/: pyproject.toml
web/streamlit/src/: app.py
(+63 files in other folders)
