[project]
name = "dash"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zhen Qin", email = "qinzhensir@outlook.com"},
]
dependencies = ["dash>=2.17.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
